# MailMigrator

./: CMakeLists.txt  README.md  partA.sql
dep/: CMakeLists.txt
dep/SQLiteCpp/: README.md
src/: CMakeLists.txt  Migrator.cpp  Migrator.h  ThreadPool.h  User.h  main.cpp  utils.h
